--- a/css/main.css
+++ b/css/main.css
@@ -292,3 +292,9 @@ h5.text {
 .mui-text-white{
 	color:#ffffff;
 }
+
+.login .text{
+    font-size: 12px;
+    color: #999;
+    margin-bottom: 10px;
+}
