--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -85,3 +85,7 @@
 .icon-liulanjilu:before { content: "\e666"; }
 
 .icon-up:before { content: "\e636"; }
+
+.icon-eye:before { content: "\e60d"; }
+
+.icon-DLS_Hide_:before { content: "\e668"; }
