--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -89,3 +89,5 @@
 .icon-eye:before { content: "\e60d"; }
 
 .icon-DLS_Hide_:before { content: "\e668"; }
+
+.icon-feiji:before { content: "\e619"; }
