一些问题修改

--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,9 @@
 	right: 10px;
 }
 
-#mui-icon-back {
+/*#mui-icon-back {
 	margin-top: 10px;
-}
+}*/
 
 .mui-content.article-detail-wrapper {
 	padding: 10px 20px;
